--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-wrap: pretty;
+  text-transform: capitalize;
+  /* border: 1px solid red; */
+}
+
+
 body {
     background: #3862b1;
     display: flex;
@@ -106,6 +116,7 @@ body {
     align-items: center;
     margin-top: 1rem;
 }
+
 @media (max-width: 991px) {
     body {
         height: auto;
