--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  background-color: #193463;
+  background-color: #ffffff;
   /* font-family: "Merienda", serif; */
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: #000000;
@@ -244,6 +244,7 @@ a {
   font-size: 2rem;
   background-color: white;
   border-radius: 10%;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
 }
 .card {
     width: 35rem;
@@ -263,7 +264,7 @@ a {
 }
 
 .card-content {
-    background-color: rgb(14, 26, 158);
+    background-color: rgb(255, 255, 255);
     padding: 16px 25px 20px;
 }
 
@@ -271,12 +272,12 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
     margin: 0 0 10px;
-    color: #ffffff;
+    color: #000000;
 } 
 
 .card-content p {
     font-size: 1.6rem;
-    color: #ffffff;
+    color: #000000;
     line-height: 1.5;
 }
 .fullStackBox img{
@@ -309,7 +310,7 @@ a {
     align-items: center;
     margin-top: 1rem;
 }
-
+/* project code ends here */
 @media (max-width: 991px) {
   body {
     height: auto;
